[package]
name = "calculator"
version = "0.20.0"
authors = ["Niko Matsakis <niko@alum.mit.edu>"]
build = "build.rs" # <-- We added this and everything after!
workspace = "../.."

[build-dependencies.lalrpop]
version = "0.20.0"
path = "../../lalrpop"
features = ["lexer"]

[dependencies]
regex = "1"

[dependencies.lalrpop-util]
version = "0.20.0"
path = "../../lalrpop-util"
